k8s/openspeedtest/openspeedtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: openspeedtest
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: openspeedtest-https
#   namespace: openspeedtest
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`speedtest.mcqueensolutions.com`)
#       kind: Rule
#       services:
#         - name: openspeedtest
#           port: 3000
#   tls:
#     certResolver: le-prod
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: openspeedtest-http
#   namespace: openspeedtest
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`speedtest.mcqueensolutions.com`)
#       kind: Rule
#       services:
#         - name: openspeedtest
#           port: 3000
