k8s/openspeedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: speedtest.alphavector.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: openspeedtest
            port:
              number: 3000
